fixed alignment and font family in plant proposal preview row

--- a/ui2022/src/app/pages/plant-proposal-page/components/plantproposal-preview-row/plantproposal-preview-row.component.scss
+++ b/ui2022/src/app/pages/plant-proposal-page/components/plantproposal-preview-row/plantproposal-preview-row.component.scss
@@ -3,6 +3,10 @@
   max-height: 100px;
 }
 
+.columns {
+  font-family: 'Bull-mono' !important;
+}
+
 .bottomLine {
   border-bottom: 1px solid #c9c9c9;
 }
@@ -17,6 +21,10 @@
 
 .w-100 {
   max-width: 764px;
+}
+
+.column {
+  padding: 0 !important;
 }
 
 @media only screen and (max-width: 768px) {
